src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from e:\NAM HUNG\Principle of Programming Language\assignment3-initial\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'readInteger'", "'printInteger'", "'readFloat'", 
                     "'writeFloat'", "'readBoolean'", "'printBoolean'", 
                     "'readString'", "'printString'", "'super'", "'preventDefault'", 
                     "<INVALID>", "<INVALID>", "'auto'", "'integer'", "'void'", 
                     "'array'", "'break'", "'float'", "'return'", "'out'", 
                     "'boolean'", "'string'", "'for'", "'continue'", "'do'", 
                     "'function'", "'of'", "'else'", "'if'", "'while'", 
                     "'inherit'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
                     "'&&'", "'||'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'::'", "'('", "')'", "','", "';'", "':'", 
                     "'{'", "'}'", "'='", "'['", "']'", "'.'" ]

    symbolicNames = [ "<INVALID>", "READINT", "PRINTINT", "READFLOAT", "WRITEFLOAT", 
                      "READBOOLEAN", "PRINTBOOL", "READSTRING", "PRINTSTRING", 
                      "SUPERFUNC", "PREVENTDEFAULT", "COMMENT", "BOOL_LIT", 
                      "AUTO", "INT", "VOID", "ARRAY_TYP", "BREAK", "FLOAT", 
                      "RETURN", "OUT", "BOOLEAN", "STRING", "FOR", "CONTINUE", 
                      "DO", "FUNCTION", "OF", "ELSE", "IF", "WHILE", "INHERIT", 
                      "ADD_OP", "SUB_OP", "MUL_OP", "DIV_OP", "MOD_OP", 
                      "NEGA_OP", "CONJ_OP", "DISJ_OP", "EQUAL_TO_OP", "NOT_EQUAL_TO_OP", 
                      "LESS_OP", "EQ_LESS_OP", "GREATER_OP", "EQ_GREATER_OP", 
                      "CONCAT_OP", "LEFT_PAREN", "RIGHT_PAREN", "COMMA", 
                      "SEMICOLON", "COLON", "LEFT_CURBRACK", "RIGHT_CURBRACK", 
                      "ASSIG_OP", "LEFT_SQUAREBRACK", "RIGHT_SQUAREBRACK", 
                      "DOT", "IDENTIFIER", "INT_LIT", "STRING_LIT", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "FLOAT_LIT", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_decl = 2
    RULE_arr = 3
    RULE_arrayList = 4
    RULE_non_null_arrayList = 5
    RULE_arrayEle = 6
    RULE_vardecl = 7
    RULE_noninitVardecl = 8
    RULE_initVardecl = 9
    RULE_initVardeclEle = 10
    RULE_arrayDecl = 11
    RULE_initAardecl = 12
    RULE_initAardeclEle = 13
    RULE_noninitAardecl = 14
    RULE_intList = 15
    RULE_idlist = 16
    RULE_typ = 17
    RULE_exprlist = 18
    RULE_non_null_exprlist = 19
    RULE_paradecl = 20
    RULE_funcdecl = 21
    RULE_funcdecl_noInherit = 22
    RULE_funcdecl_Inherit = 23
    RULE_functyp = 24
    RULE_paramlist = 25
    RULE_params = 26
    RULE_non_null_params = 27
    RULE_expr = 28
    RULE_relational_expr = 29
    RULE_relational_EQ_op = 30
    RULE_relational_noEQ_op = 31
    RULE_logical_expr = 32
    RULE_logical_op = 33
    RULE_add_expr = 34
    RULE_mul_expr = 35
    RULE_mul_op = 36
    RULE_nega_expr = 37
    RULE_sign_expr = 38
    RULE_index_expr = 39
    RULE_index_list = 40
    RULE_funcall_expr = 41
    RULE_subexpr = 42
    RULE_stmt = 43
    RULE_assign_stmt = 44
    RULE_lhs = 45
    RULE_unmatchStmt = 46
    RULE_matchStmt = 47
    RULE_for_stmt = 48
    RULE_while_stmt = 49
    RULE_do_while_stmt = 50
    RULE_break_stmt = 51
    RULE_continue_stmt = 52
    RULE_return_stmt = 53
    RULE_call_stmt = 54
    RULE_block_stmt = 55
    RULE_blockelements = 56
    RULE_non_null_blockelements = 57
    RULE_blockelement = 58
    RULE_special_function = 59
    RULE_read_integer = 60
    RULE_print_integer = 61
    RULE_read_float = 62
    RULE_write_float = 63
    RULE_read_boolean = 64
    RULE_print_boolean = 65
    RULE_read_string = 66
    RULE_print_string = 67
    RULE_super_func = 68
    RULE_prevent_default = 69

    ruleNames =  [ "program", "decls", "decl", "arr", "arrayList", "non_null_arrayList", 
                   "arrayEle", "vardecl", "noninitVardecl", "initVardecl", 
                   "initVardeclEle", "arrayDecl", "initAardecl", "initAardeclEle", 
                   "noninitAardecl", "intList", "idlist", "typ", "exprlist", 
                   "non_null_exprlist", "paradecl", "funcdecl", "funcdecl_noInherit", 
                   "funcdecl_Inherit", "functyp", "paramlist", "params", 
                   "non_null_params", "expr", "relational_expr", "relational_EQ_op", 
                   "relational_noEQ_op", "logical_expr", "logical_op", "add_expr", 
                   "mul_expr", "mul_op", "nega_expr", "sign_expr", "index_expr", 
                   "index_list", "funcall_expr", "subexpr", "stmt", "assign_stmt", 
                   "lhs", "unmatchStmt", "matchStmt", "for_stmt", "while_stmt", 
                   "do_while_stmt", "break_stmt", "continue_stmt", "return_stmt", 
                   "call_stmt", "block_stmt", "blockelements", "non_null_blockelements", 
                   "blockelement", "special_function", "read_integer", "print_integer", 
                   "read_float", "write_float", "read_boolean", "print_boolean", 
                   "read_string", "print_string", "super_func", "prevent_default" ]

    EOF = Token.EOF
    READINT=1
    PRINTINT=2
    READFLOAT=3
    WRITEFLOAT=4
    READBOOLEAN=5
    PRINTBOOL=6
    READSTRING=7
    PRINTSTRING=8
    SUPERFUNC=9
    PREVENTDEFAULT=10
    COMMENT=11
    BOOL_LIT=12
    AUTO=13
    INT=14
    VOID=15
    ARRAY_TYP=16
    BREAK=17
    FLOAT=18
    RETURN=19
    OUT=20
    BOOLEAN=21
    STRING=22
    FOR=23
    CONTINUE=24
    DO=25
    FUNCTION=26
    OF=27
    ELSE=28
    IF=29
    WHILE=30
    INHERIT=31
    ADD_OP=32
    SUB_OP=33
    MUL_OP=34
    DIV_OP=35
    MOD_OP=36
    NEGA_OP=37
    CONJ_OP=38
    DISJ_OP=39
    EQUAL_TO_OP=40
    NOT_EQUAL_TO_OP=41
    LESS_OP=42
    EQ_LESS_OP=43
    GREATER_OP=44
    EQ_GREATER_OP=45
    CONCAT_OP=46
    LEFT_PAREN=47
    RIGHT_PAREN=48
    COMMA=49
    SEMICOLON=50
    COLON=51
    LEFT_CURBRACK=52
    RIGHT_CURBRACK=53
    ASSIG_OP=54
    LEFT_SQUAREBRACK=55
    RIGHT_SQUAREBRACK=56
    DOT=57
    IDENTIFIER=58
    INT_LIT=59
    STRING_LIT=60
    ILLEGAL_ESCAPE=61
    UNCLOSE_STRING=62
    FLOAT_LIT=63
    WS=64
    ERROR_CHAR=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.decls()
            self.state = 141
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls




    def decls(self):

        localctx = MT22Parser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.decl()
                self.state = 144
                self.decls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def arrayDecl(self):
            return self.getTypedRuleContext(MT22Parser.ArrayDeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.funcdecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.arrayDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_CURBRACK(self):
            return self.getToken(MT22Parser.LEFT_CURBRACK, 0)

        def arrayList(self):
            return self.getTypedRuleContext(MT22Parser.ArrayListContext,0)


        def RIGHT_CURBRACK(self):
            return self.getToken(MT22Parser.RIGHT_CURBRACK, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arr




    def arr(self):

        localctx = MT22Parser.ArrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(MT22Parser.LEFT_CURBRACK)
            self.state = 155
            self.arrayList()
            self.state = 156
            self.match(MT22Parser.RIGHT_CURBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_null_arrayList(self):
            return self.getTypedRuleContext(MT22Parser.Non_null_arrayListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayList




    def arrayList(self):

        localctx = MT22Parser.ArrayListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arrayList)
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.READINT, MT22Parser.PRINTINT, MT22Parser.READFLOAT, MT22Parser.WRITEFLOAT, MT22Parser.READBOOLEAN, MT22Parser.PRINTBOOL, MT22Parser.READSTRING, MT22Parser.PRINTSTRING, MT22Parser.SUPERFUNC, MT22Parser.PREVENTDEFAULT, MT22Parser.BOOL_LIT, MT22Parser.SUB_OP, MT22Parser.NEGA_OP, MT22Parser.LEFT_PAREN, MT22Parser.LEFT_CURBRACK, MT22Parser.IDENTIFIER, MT22Parser.INT_LIT, MT22Parser.STRING_LIT, MT22Parser.FLOAT_LIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.non_null_arrayList()
                pass
            elif token in [MT22Parser.RIGHT_CURBRACK]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_null_arrayListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayEle(self):
            return self.getTypedRuleContext(MT22Parser.ArrayEleContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def non_null_arrayList(self):
            return self.getTypedRuleContext(MT22Parser.Non_null_arrayListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_non_null_arrayList




    def non_null_arrayList(self):

        localctx = MT22Parser.Non_null_arrayListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_non_null_arrayList)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.arrayEle()
                self.state = 163
                self.match(MT22Parser.COMMA)
                self.state = 164
                self.non_null_arrayList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.arrayEle()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayEleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayEle




    def arrayEle(self):

        localctx = MT22Parser.ArrayEleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arrayEle)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initVardecl(self):
            return self.getTypedRuleContext(MT22Parser.InitVardeclContext,0)


        def noninitVardecl(self):
            return self.getTypedRuleContext(MT22Parser.NoninitVardeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vardecl)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.initVardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.noninitVardecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NoninitVardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def SEMICOLON(self):
            return self.getToken(MT22Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_noninitVardecl




    def noninitVardecl(self):

        localctx = MT22Parser.NoninitVardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_noninitVardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.idlist()
            self.state = 176
            self.match(MT22Parser.COLON)
            self.state = 177
            self.typ()
            self.state = 178
            self.match(MT22Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitVardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def initVardeclEle(self):
            return self.getTypedRuleContext(MT22Parser.InitVardeclEleContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(MT22Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_initVardecl




    def initVardecl(self):

        localctx = MT22Parser.InitVardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_initVardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(MT22Parser.IDENTIFIER)
            self.state = 181
            self.initVardeclEle()
            self.state = 182
            self.expr()
            self.state = 183
            self.match(MT22Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitVardeclEleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def initVardeclEle(self):
            return self.getTypedRuleContext(MT22Parser.InitVardeclEleContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def ASSIG_OP(self):
            return self.getToken(MT22Parser.ASSIG_OP, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_initVardeclEle




    def initVardeclEle(self):
